# erp-ai-agent

./: AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260421_0001_initial_placeholder.py
app/: __init__.py  main.py
app/api/: health.py
app/core/: __init__.py  config.py
app/db/: __init__.py  base.py  session.py
data-import/: aliases_final.xlsx  brand_aliases_final.xlsx  brand_aliases_review_summary.md  brands_master.xlsx  cleanup_report.md  delivery_locations_master.xlsx  generate_aliases.py  product_aliases_master.xlsx  product_aliases_review_summary.md  products_master.xlsx
data-import/_archive/: aliases.xlsx  brand_aliases_template.xlsx  companies.xlsx  companies_final.xlsx  conflicts.xlsx  detect_duplicates.py  duplicates.xlsx  merge_duplicates.py  review.md
docker/: Dockerfile  init.sql
docs/: 00-continuation-guide.md  01-project-blueprint.md  02-development-plan.md  schema.md  workflows.md
tests/: test_health.py
